--- a/WebSiteBanSach/Views/Layout/LayoutNonSlider.cshtml
+++ b/WebSiteBanSach/Views/Layout/LayoutNonSlider.cshtml
@@ -50,11 +50,26 @@
 
                 <div id="DangNhap_DangKi" style="font-size:12px;font-weight:lighter">
                     <div>
-                        <a href="#">
-                            <img src="~/HinhAnh/phone.png" width="10px" />000101011 |
-                        </a>
-                        @Html.ActionLink("Đăng ký", "DangKy", "NguoiDung", null, htmlAttributes: new { @class = "DangKy" }) |
-                        @Html.ActionLink("Đăng nhập", "DangNhap", "NguoiDung", null, htmlAttributes: new { @class = "DangNhap" })
+                        @if (Session["Username"] != null)
+                        {
+
+                            <text> <button style="background-color:cyan; font-weight:bold">Xin Chào @Session["UserName"]</button> </text>
+                            @*@:[ @Html.ActionLink("Đăng Xuất",null, htmlAttributes: new { @class = "DangXuat"  }) ]*@
+                            @:@Html.ActionLink("Đăng Xuất", "DangXuat", "NguoiDung", null, new { @class = "button", @style = "background-color:red; font-weight:bold " })
+
+
+
+
+
+
+
+
+                        }
+                        else
+                        {
+                            @: @Html.ActionLink("Đăng Ký", "DangKy", "NguoiDung", null, htmlAttributes: new { @class = "button", @style = "background-color:cyan; font-weight:bold" })
+                            @:  @Html.ActionLink("Đăng Nhập", "DangNhap", "NguoiDung", null, htmlAttributes: new { @class = "button", @style = "background-color:green; font-weight:bold" })
+            }
                         <br />
                     </div>
                     <div style="border-top:.1px solid gray;margin-top:10px;padding-top:5px">
@@ -107,7 +122,7 @@
             </div>
         </section>
 
-  
+
         @*Div body *@
         <div id="Content">
             <div id="divChuDeVaNXB" style="float:left;width:30%">
@@ -154,14 +169,14 @@
 
     @*Script Chạy nivoslider*@
     @*<script type="text/javascript">
-        $(window).load(function () {
-            $('#slider').nivoSlider({
-                controlNav: false,               // 1,2,3... navigation
-                nextText: '',
-                prevText:''
+            $(window).load(function () {
+                $('#slider').nivoSlider({
+                    controlNav: false,               // 1,2,3... navigation
+                    nextText: '',
+                    prevText:''
+                });
             });
-        });
-    </script>*@
+        </script>*@
 </body>
 
 </html>
