--- a/WebSiteBanSach/Views/Layout/AdminLayout.cshtml
+++ b/WebSiteBanSach/Views/Layout/AdminLayout.cshtml
@@ -316,7 +316,7 @@
                         <li><a href="@Url.Action("Index","QuanLyNhaXuatBan")"><i class="icon-tasks"></i><span class="hidden-tablet"> Nhà Xuất Bản</span></a></li>
                         @*<li><a href="ui.html"><i class="icon-eye-open"></i><span class="hidden-tablet"> Chủ Đề</span></a></li>*@
                         <li><a href="@Url.Action("Index","QuanLyKhachHang")"><i class="icon-dashboard"></i><span class="hidden-tablet"> Khách Hàng</span></a></li>
-                        <li><a href="form.html"><i class="icon-edit"></i><span class="hidden-tablet"> Đơn Hàng</span></a></li>
+                        <li><a href="@Url.Action("Index","QuanLyDonHang")"><i class="icon-edit"></i><span class="hidden-tablet"> Đơn Hàng</span></a></li>
                         @*<li><a href="chart.html"><i class="icon-list-alt"></i><span class="hidden-tablet"> Tìm Kiếm</span></a></li>*@
                         @*<li><a href="login.html"><i class="icon-lock"></i><span class="hidden-tablet"> Trang Đăng Nhập</span></a></li>*@
                         @*<li>
